option java_outer_classname = "LCSetRectangleAreaAlarm";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

import "core/proto/common/java/SetAreaOperation.proto";

message SetRectangleAreaAlarm{
	required SetAreaOperation operations = 1;
	repeated RectangleArea areas = 2;
}
message RectangleArea{
	required int64 areaId = 1;
	required int32 areaProperty = 2;
	required int32 leftTopLatitude = 3;
	required int32 leftToplongitude = 4;
	required int32 rightBottomLatitude = 5;
	required int32 rightBottomLongitude = 6;
	optional int64 beginDate = 7;
	optional int64 endDate = 8;
	optional int32 maxSpeed = 9;
	optional int32 speedingContinuousTime = 10;
	}